# music_app_pyQT

./: .env.example  .gitignore  Dockerfile  README.md  console_app.py  database.db  pyproject.toml  requirements.txt  run.py  run.spec  start_music_server.sh
app/: app.py  authorization.py
app/config/: stałe.py
app/db/: db_controller.py
app/desktop/: config.py  main.py
app/desktop/assets/: __init__.py
app/desktop/logic/: __init__.py  audio_manager.py  download_manager.py  file_manager.py  preview_manager.py
app/desktop/threads/: __init__.py  add_subtitles_thread.py  download_thread.py  fix_metadata_thread.py  preview_thread.py  refresh_metadata_thread.py  search_thread.py  thumbnail_loader.py
app/desktop/ui/: __init__.py  main_window.py  new_styles.py  styles.py
app/desktop/utils/: __init__.py  async_runner.py  auto_playlist.py  b2_uploader.py  cloud_client.py  global_hotkeys.py  (+8 more)
app/endpoints/: cloud.py  data.py  download.py  file_download.py  home.py  like.py  playlists.py  recommendations.py  register.py  search.py  song_id.py  song_title.py  songs.py  subtitles.py  video_url.py
app/exceptions/: youtube_errors.py
app/logic/: b2_storage.py  custom_song_processer.py  fetch_video.py  handle_data.py  handle_like.py  ultimate_downloader.py
app/models/: recommendation_models.py  song.py
app/tests/: test_api_key_manager.py  test_auto_playlist.py  test_dowloand.py  test_playlist_manager.py  test_recommender.py  test_youtube_error_handler.py
app/utils/: api_key_manager.py  file_response.py  gemini_key_manager.py  music_utils.py  youtube_error_handler.py
(+42 files in other folders)
