[project]
name = "music-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt5>=5.15.11",
    "boto3>=1.34.0",
    "pynput>=1.7.6",
    "mutagen>=1.47.0",
    # API + desktop (import chain z app.logic, app.endpoints, run.py)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "google-api-python-client>=2.100.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "yt-dlp>=2024.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "srt>=3.5.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
